509f88e79b8ef68fa22ae6f0587f6b738e3ce8c8
BUILD: version_2.9.1-8-g509f88e79b
system: rolling
date: Mon Mar 31 03:59:32 PM CEST 2025
tasks: configure_deps build_deps configure build[failed]
FAILED:
                 from /home/rschiele/git/PrusaSlicer/bundled_deps/libigl/igl/copyleft/cgal/mesh_boolean.cpp:11,
                 from /home/rschiele/git/PrusaSlicer/bundled_deps/libigl/igl/copyleft/cgal/mesh_boolean.h:226,
                 from /home/rschiele/git/PrusaSlicer/src/libslic3r/MeshBoolean.cpp:14:
/home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Intersections_3/internal/Plane_3_Triangle_3_intersection.h: In function ‘typename CGAL::Intersection_traits<K, typename K::Plane_3, typename K::Triangle_3>::result_type CGAL::Intersections::internal::intersection(const typename K::Plane_3&, const typename K::Triangle_3&, const K&)’:
/home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Intersections_3/internal/Plane_3_Triangle_3_intersection.h:144:65: error: ‘prior’ is not a member of ‘boost’; did you mean ‘boost::mpl::prior’?
  144 |            k.construct_segment_3_object()(*pts.begin(), *boost::prior(pts.end())));
      |                                                                 ^~~~~
In file included from /usr/include/boost/mpl/next.hpp:17,
                 from /usr/include/boost/mpl/bind.hpp:25,
                 from /usr/include/boost/mpl/lambda.hpp:18,
                 from /usr/include/boost/mpl/apply.hpp:25,
                 from /usr/include/boost/iterator/iterator_facade.hpp:36,
                 from /usr/include/boost/iterator/iterator_adaptor.hpp:15,
                 from /usr/include/boost/iterator/transform_iterator.hpp:13,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/boost/iterator/transform_iterator.hpp:27,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Coercion_traits.h:27,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/number_type_basic.h:35,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/basic.h:28,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Cartesian/Cartesian_base.h:20:
/usr/include/boost/mpl/next_prior.hpp:38:8: note: ‘boost::mpl::prior’ declared here
   38 | struct prior
      |        ^~~~~
make[2]: *** [src/libslic3r/CMakeFiles/libslic3r_cgal.dir/build.make:121: src/libslic3r/CMakeFiles/libslic3r_cgal.dir/MeshBoolean.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1572: src/libslic3r/CMakeFiles/libslic3r_cgal.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
======================================================================
BUILD: version_2.9.1-8-g509f88e79b
system: rolling
date: Mon Mar 31 04:00:30 PM CEST 2025
tasks: configure_deps build_deps configure build install
SUCCESS
======================================================================
BUILD: version_2.9.1-8-g509f88e79b
system: rolling
date: Mon Mar 31 04:07:53 PM CEST 2025
tasks: configure_deps build_deps configure build install
SUCCESS
======================================================================
BUILD: version_2.9.1-8-g509f88e79b
system: rolling
date: Mon Mar 31 04:13:05 PM CEST 2025
tasks: configure_deps build_deps configure build[failed]
FAILED:
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Simple_cartesian.h:20,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Exact_predicates_exact_constructions_kernel.h:20,
                 from /home/rschiele/git/PrusaSlicer/bundled_deps/libigl/igl/copyleft/cgal/assign.h:12,
                 from /home/rschiele/git/PrusaSlicer/bundled_deps/libigl/igl/copyleft/cgal/mesh_boolean.cpp:11:
In copy constructor ‘boost::tuples::cons<HT, TT>::cons(const boost::tuples::cons<HT, TT>&) [with HT = CGAL::Point_3<CGAL::Epick>; TT = boost::tuples::cons<double, boost::tuples::cons<CGAL::Sign, boost::tuples::null_type> >]’,
    inlined from ‘boost::tuples::tuple<CGAL::Point_3<CGAL::Epick>, double, CGAL::Sign, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type>::tuple(boost::tuples::tuple<CGAL::Point_3<CGAL::Epick>, double, CGAL::Sign, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type>&&)’ at /usr/include/boost/tuple/detail/tuple_basic.hpp:479:7,
    inlined from ‘CGAL::SphereC3<CGAL::Epick>::SphereC3(CGAL::SphereC3<CGAL::Epick>&&)’ at /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Cartesian/Sphere_3.h:28:7,
    inlined from ‘CGAL::Sphere_3<CGAL::Epick>::Sphere_3(CGAL::Sphere_3<CGAL::Epick>&&)’ at /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Sphere_3.h:31:7,
    inlined from ‘constexpr std::pair<_T1, _T2>::pair(_U1&&, _U2&&) [with _U1 = CGAL::Sphere_3<CGAL::Epick>; _U2 = bool; typename std::enable_if<(std::_PCC<true, _T1, _T2>::_MoveConstructiblePair<_U1, _U2>() && std::_PCC<true, _T1, _T2>::_ImplicitlyMoveConvertiblePair<_U1, _U2>()), bool>::type <anonymous> = true; _T1 = CGAL::Sphere_3<CGAL::Epick>; _T2 = bool]’ at /usr/include/c++/14.2.1/bits/stl_pair.h:882:4,
    inlined from ‘constexpr std::pair<typename std::__strip_reference_wrapper<typename std::decay<_Tp>::type>::__type, typename std::__strip_reference_wrapper<typename std::decay<_Tp2>::type>::__type> std::make_pair(_T1&&, _T2&&) [with _T1 = CGAL::Sphere_3<CGAL::Epick>; _T2 = bool]’ at /usr/include/c++/14.2.1/bits/stl_pair.h:1137:72,
    inlined from ‘std::pair<CGAL::Sphere_3<CGAL::Epick>, bool> CGAL::Epic_converter<IK>::operator()(const typename IK::Sphere_3&) const [with IK = CGAL::Simple_cartesian<CGAL::Interval_nt<false> >]’ at /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Epic_converter.h:331:44,
    inlined from ‘CGAL::Static_filtered_predicate<AK, FP, EpicP>::result_type CGAL::Static_filtered_predicate<AK, FP, EpicP>::operator()(const A1&, const A2&) const [with A1 = CGAL::Sphere_3<CGAL::Epeck>; A2 = CGAL::Bbox_3; AK = CGAL::Simple_cartesian<CGAL::Interval_nt<false> >; FP = CGAL::Filtered_predicate<CGAL::CommonKernelFunctors::Do_intersect_3<CGAL::Simple_cartesian<__gmp_expr<__mpq_struct [1], __mpq_struct [1]> > >, CGAL::CommonKernelFunctors::Do_intersect_3<CGAL::Simple_cartesian<CGAL::Interval_nt<false> > >, CGAL::Exact_converter<CGAL::Epeck, CGAL::Simple_cartesian<__gmp_expr<__mpq_struct [1], __mpq_struct [1]> > >, CGAL::Approx_converter<CGAL::Epeck, CGAL::Simple_cartesian<CGAL::Interval_nt<false> > >, true>; EpicP = CGAL::internal::Static_filters_predicates::Do_intersect_3<CGAL::Filtered_kernel_base<CGAL::Type_equality_wrapper<CGAL::Cartesian_base_no_ref_count<double, CGAL::Epick>, CGAL::Epick> >, CGAL::internal::Static_filters<CGAL::Filtered_kernel_base<CGAL::Type_equality_wrapper<CGAL::Cartesian_base_no_ref_count<double, CGAL::Epick>, CGAL::Epick> > > >]’ at /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Static_filtered_predicate.h:44:10,
    inlined from ‘CGAL::Comparison_result CGAL::AABB_traits_3<GeomTraits, AABBPrimitive, BboxMap>::Compare_distance::operator()(const Point&, const CGAL::AABB_traits_3<GeomTraits, AABBPrimitive, BboxMap>::Bounding_box&, const Point&, CGAL::Tag_false) const [with GeomTraits = CGAL::Epeck; AABBPrimitive = CGAL::AABB_triangle_primitive_3<CGAL::Epeck, __gnu_cxx::__normal_iterator<CGAL::Triangle_3<CGAL::Epeck>*, std::vector<CGAL::Triangle_3<CGAL::Epeck> > >, std::integral_constant<bool, false> >; BboxMap = CGAL::Default]’ at /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/AABB_traits_3.h:414:11:
/usr/include/boost/tuple/detail/tuple_basic.hpp:314:27: warning: ‘<unnamed>.CGAL::Sphere_3<CGAL::Epick>::<unnamed>.CGAL::SphereC3<CGAL::Epick>::base.boost::tuples::tuple<CGAL::Point_3<CGAL::Epick>, double, CGAL::Sign, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type, boost::tuples::null_type>::<unnamed>.boost::tuples::cons<CGAL::Point_3<CGAL::Epick>, boost::tuples::cons<double, boost::tuples::cons<CGAL::Sign, boost::tuples::null_type> > >::head’ may be used uninitialized [-Wmaybe-uninitialized]
  314 |   cons( const cons& u ) : head(u.head), tail(u.tail) {}
      |                           ^~~~~~~~~~~~
In file included from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Static_filtered_predicate.h:15,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Lazy_kernel.h:18,
                 from /home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Exact_predicates_exact_constructions_kernel.h:27:
/home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Epic_converter.h: In function ‘CGAL::Comparison_result CGAL::AABB_traits_3<GeomTraits, AABBPrimitive, BboxMap>::Compare_distance::operator()(const Point&, const CGAL::AABB_traits_3<GeomTraits, AABBPrimitive, BboxMap>::Bounding_box&, const Point&, CGAL::Tag_false) const [with GeomTraits = CGAL::Epeck; AABBPrimitive = CGAL::AABB_triangle_primitive_3<CGAL::Epeck, __gnu_cxx::__normal_iterator<CGAL::Triangle_3<CGAL::Epeck>*, std::vector<CGAL::Triangle_3<CGAL::Epeck> > >, std::integral_constant<bool, false> >; BboxMap = CGAL::Default]’:
/home/rschiele/git/PrusaSlicer/build/deps/destdir/usr/local/include/CGAL/Epic_converter.h:331:27: note: ‘<anonymous>’ declared here
  331 |     return std::make_pair(Sphere_3(), false);
      |                           ^~~~~~~~~~
make[1]: *** [CMakeFiles/Makefile2:1572: src/libslic3r/CMakeFiles/libslic3r_cgal.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
